--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html class="black" lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite App</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
-</head>
-
-<body>
-  <main class="main" id="app">
-    <h1 id="date" class="date">aaaaaa</h1>
-  </main>
-  <script type="module" src="/main.js"></script>
-</body>
-
+  <body>
+    <main class="main" id="app">
+      <div class="item-container">
+        <div class="item"></div>
+        <div class="small-item"></div>
+      </div>
+    </main>
+    <script type="module" src="/main.js"></script>
+  </body>
 </html>
